changed z-index of popup to ensure it is always rendered at the top

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,6 +49,7 @@ input{
 }
 
 .tutorialContainer {
+    z-index: 99;
     position: absolute;
     width: 100vw;
     height: 100vh;
